force-app/main/default/objects/Purchase_Transaction__c/Purchase_Transaction__c.object-meta.xml
<CustomObject>
    <label>Purchase Transaction</label>
    <nameField>
        <label>Purchase Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>