force-app/main/default/objects/Purchase_Transaction__c/fields/Authorized_User__c.field-meta.xml
<CustomField>
    <fullName>Authorized_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The employee who authorized the transaction. This should be a depot manager or a higher-up.</description>
    <label>Authorized User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Purchase_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>