force-app/main/default/objects/Purchase_Transaction__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The company that made the purchase.</description>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Transactions</relationshipLabel>
    <relationshipName>Purchase_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>