force-app/main/default/objects/Purchase_Transaction__c/fields/Depot__c.field-meta.xml
<CustomField>
    <fullName>Depot__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The depot where the vehicles will be deployed to.</description>
    <label>Depot</label>
    <referenceTo>Depot__c</referenceTo>
    <relationshipLabel>Purchase Transactions</relationshipLabel>
    <relationshipName>Purchase_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>