force-app/main/default/objects/Purchase_Transaction__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The manufacturer the purchase is made from.</description>
    <label>Manufacturer</label>
    <referenceTo>Manufacturer__c</referenceTo>
    <relationshipLabel>Purchase Transactions</relationshipLabel>
    <relationshipName>Purchase_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>