force-app/main/default/objects/Purchase_Transaction__c/fields/Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Date__c</fullName>
    <defaultValue>Now()</defaultValue>
    <description>Date when the purchase was processed.</description>
    <label>Purchase Date</label>
    <type>Date</type>
</CustomField>