force-app/main/default/objects/Purchase_Transaction__c/listViews/Purchase_Transactions_View_List.listView-meta.xml
<ListView>
    <fullName>Purchase_Transactions_View_List</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Purchase_Date__c</columns>
    <columns>Depot__c</columns>
    <columns>Manufacturer__c</columns>
    <columns>Price__c</columns>
    <filterScope>Mine</filterScope>
    <label>Purchase Transactions View List</label>
</ListView>